git responsive spacing working great on single challenge page, bottom margin problem fixed

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -509,7 +509,7 @@ body {
 
 .hVideo {
   width: 100%;
-  background-color: blue;
+  background-color: black;
 }
 
 .impactChallenged{
@@ -622,7 +622,7 @@ body {
 
 .lVideo {
   width: 100%;
-  /*background-color: blue;*/
+  background-color: black;
 }
 
 .miniChallInfo {
